# blog-app-by-django

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose-prod_template.yml  docker-compose.yml  env  noxfile.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
accounts/: admin.py  models.py  views.py
accounts/migrations/: 0001_initial.py  0002_customuser_profile_pic.py  0003_customuser_countries.py  0004_rename_countries_customuser_country.py
accounts/tests/: test_models.py
code/blogapi/: Pipfile
code/blogapi/config/: settings.py  urls.py
code/blogapi/posts/: tests.py  urls.py  views.py
code/blogapi/posts/migrations/: 0001_initial.py
code/todo/backend/: Pipfile
code/todo/backend/config/: settings.py  urls.py
code/todo/backend/todos/: tests.py  urls.py
code/todo/backend/todos/migrations/: 0001_initial.py
code/todo/frontend/src/: App.js
config/: settings.py  urls.py
docs/: conf.py  create_new_posts.rst  index.rst
htmlcov/: d_1ea838694151cac8_test_py.html  d_1ea838694151cac8_urls_py.html  d_2404c9c06e601cf8_admin_py.html  d_2404c9c06e601cf8_apps_py.html  d_2404c9c06e601cf8_models_py.html  d_2404c9c06e601cf8_permissions_py.html  d_2404c9c06e601cf8_serializers_py.html  d_2404c9c06e601cf8_urls_py.html  d_2404c9c06e601cf8_views_py.html  d_509fd8af0f7a1b49_admin_py.html  d_509fd8af0f7a1b49_apps_py.html  d_509fd8af0f7a1b49_forms_py.html  d_509fd8af0f7a1b49_models_py.html  d_509fd8af0f7a1b49_urls_py.html  d_509fd8af0f7a1b49_views_py.html  d_9df13ddeb1e47e46_admin_py.html  d_9df13ddeb1e47e46_apps_py.html  d_9df13ddeb1e47e46_forms_py.html  d_9df13ddeb1e47e46_models_py.html  d_9df13ddeb1e47e46_urls_py.html  d_9df13ddeb1e47e46_views_py.html  index.html  status.json
pages/: urls.py
pages/tests/: test_views.py
posts/: models.py  serializers.py  tests.py  urls.py  views.py
posts/migrations/: 0001_initial.py
posts/tests/: factories.py  test_core.py  test_models.py
static/css/: base.css
staticfiles/: staticfiles.json
staticfiles/drf-yasg/: insQ.min.90ab21607447.js
staticfiles/drf-yasg/redoc/: LICENSE.cf2d48dc6713  redoc.min.2b1eee526e0a.js
staticfiles/drf-yasg/redoc-old/: LICENSE.e4e5f59c85dc
staticfiles/drf-yasg/swagger-ui-dist/: swagger-ui-bundle.6056939ffb14.js  swagger-ui-es-bundle-core.3e6700b63df5.js  swagger-ui-es-bundle.150d41691600.js  swagger-ui-standalone-preset.3286d517137c.js  swagger-ui.158a8d7ab729.css
templates/: base.html
templates/account/: email.html  signup.html  user_detail.html  user_form.html
templates/admin/: base_site.html
templates/pages/: home.html
templates/posts/: post_list.html
templates/rest_framework/: base.html
